# slp650-sdk

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: 01_ARCHITECTURE.md  02_HARDWARE.md  03_NATIVE_PROTOCOL.md  04_LABEL_MEDIA.md  05_RENDERING.md  06_PYTHON_SDK.md  07_REST_API.md  08_RASPBERRY_PI.md  09_EMBEDDED_TRANSPORT.md  10_DEVELOPMENT.md  11_INTEGRATION_GUIDE.md
fixtures/: pattern_black_984x285.slp  pattern_border_984x285.slp  pattern_checkerboard_984x285.slp  pattern_hline_984x285.slp  pattern_pixel_984x285.slp  pattern_vline_984x285.slp  pattern_white_984x285.slp  white_density-high.slp  white_density-low.slp  white_media-return.slp
fixtures-badge/: white.slp
scripts/: capture_raw.sh  install_api.sh  install_driver.sh
src/slp650_sdk/: __init__.py  api.py  cli.py  codes.py  config.py  encoder.py  errors.py  native_encoder.py  patterns.py  protocol.py  rendering.py  templates.py  transport.py
systemd/: slp650-api.service
tests/: test_api.py  test_config.py  test_native_encoder.py  test_patterns.py  test_protocol.py  test_rendering.py  test_templates.py
