[project]
name = "slp650-sdk"
version = "0.2.0"
description = "Portable SDK for the Seiko SLP650/SLP650SE label printer: renderer, native-protocol encoder, and transports"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Diego Garzaro", email = "diego.garzaro@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "python-multipart>=0.0.20",
    "pillow>=11.0",
    "pydantic>=2.11",
    "qrcode>=8.0",
    "python-barcode>=0.15",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
]

[project.urls]
Repository = "https://github.com/DiegoGarzaro/slp650-sdk"

[project.scripts]
slp650 = "slp650_sdk.cli:main"
slp650-patterns = "slp650_sdk.patterns:main"
slp650-dump = "slp650_sdk.protocol:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slp650_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be call defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Header"]

[tool.pytest.ini_options]
testpaths = ["tests"]
